[package]
name = "crypto-data"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_qs = "0.13.0"
chrono = "0.4.38"
once_cell = "1.19.0"
csv = "1.3.0"
anyhow = "1.0.86"
indicatif = "0.17.8"
